src/test/ui/fn-in-pat.stderr
error[E0164]: expected tuple struct/variant, found method `<A>::new`
  --> $DIR/fn-in-pat.rs:11:9
   |
LL |         A::new() => (),
   |         ^^^^^^^^ not a tuple variant or struct

error: aborting due to previous error

For more information about this error, try `rustc --explain E0164`.
